# tensorvm

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
examples/: display_module.rs  usage_example.py
python/pytensor_rt/: __init__.py
python/tensorvm/: numba_ffi.py
python/tests/: test_python_interface.py
src/: array.rs  ffi.rs  lib.rs  python_bindings.rs  python_vm.rs  vm.rs
tests/: test_python_interface.py
