[package]
name = "pytensor-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytensor_rt"
crate-type = ["cdylib", "rlib"]

[dependencies]
aligned-vec = "0.6.4"
anyhow = "1.0.99"
crossbeam-utils = "0.8.21"
itertools = "0.14.0"
log = "0.4.28"
ndarray = "0.16.1"
numpy = "0.26.0"
pyo3 = { version = "0.26.0", features = ["anyhow"] }
rayon = "1.11.0"
smallvec = "1.15.1"
thiserror = "2.0.16"
